language-server/src/tests/snapshots/gleam_language_server__tests__action__import_type_constructor_qualified_without_existing_import.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble\n\nfn wibble() -> Nil {\n    Wobble\n    Nil\n}\n"
---
----- BEFORE ACTION

import wobble

fn wibble() -> Nil {
    Wobble
    ↑     
    Nil
}


----- AFTER ACTION

import wibble
import wobble

fn wibble() -> Nil {
    wibble.Wobble
    Nil
}
