language-server/src/tests/snapshots/gleam_language_server__tests__action__import_type_constructor_unqualified_with_existing_import.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\nfn wibble() -> Nil {\n    Wobble\n    Nil\n}\n"
---
----- BEFORE ACTION

import wibble

fn wibble() -> Nil {
    Wobble
    ↑     
    Nil
}


----- AFTER ACTION

import wibble.{Wobble}

fn wibble() -> Nil {
    Wobble
    Nil
}
