language-server/src/tests/snapshots/gleam_language_server__tests__action__import_type_constructor_unqualified_with_existing_import_not_at_top.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble\nimport wibble.{type Wibble}\n\nfn wibble() -> Nil {\n    Wobble\n    Nil\n}\n"
---
----- BEFORE ACTION

import wobble
import wibble.{type Wibble}

fn wibble() -> Nil {
    Wobble
    ↑     
    Nil
}


----- AFTER ACTION

import wobble
import wibble.{type Wibble, Wobble}

fn wibble() -> Nil {
    Wobble
    Nil
}
