language-server/src/tests/snapshots/gleam_language_server__tests__action__import_type_constructor_unqualified_with_existing_import_without_alias.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble as _\n\nfn wibble() -> Nil {\n    Wobble\n    Nil\n}\n"
---
----- BEFORE ACTION

import wibble as _

fn wibble() -> Nil {
    Wobble
    ↑     
    Nil
}


----- AFTER ACTION

import wibble.{Wobble}
import wibble as _

fn wibble() -> Nil {
    Wobble
    Nil
}
