language-server/src/tests/snapshots/gleam_language_server__tests__action__import_type_qualified_with_existing_import.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\nfn wibble(wobble: Wibble) -> Nil { Nil }\n"
---
----- BEFORE ACTION

import wibble

fn wibble(wobble: Wibble) -> Nil { Nil }
                  ↑                     


----- AFTER ACTION

import wibble

fn wibble(wobble: wibble.Wibble) -> Nil { Nil }
